# flutter_cef

./: .gitignore  .metadata  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PORTING.md  README.md  analysis_options.yaml  codemagic.yaml  pubspec.yaml
.github/workflows/: ci.yaml  release-cef-host.yml
docs/: OSR_SCALE_MISMATCH.md  OSR_VISIBILITY_RESIZE_AUDIT.md
example/: README.md  pubspec.yaml  run_conformance_oracle.sh  run_leak_soak.sh
example/integration_test/: plugin_integration_test.dart
example/lib/: channel_probe.dart  channel_probe_shared.dart  conformance_harness.dart  crispness_probe.dart  cull_wedge_probe.dart  interaction_soak_probe.dart  main.dart  multiview_probe.dart  realsite_soak_probe.dart  recreate_soak_probe.dart  sharedhost_html_probe.dart  stress_probe.dart  zoom_soak_probe.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
lib/: flutter_cef.dart  flutter_cef_method_channel.dart
lib/src/: cef_events.dart  cef_input.dart  cef_web_controller.dart  cef_web_view.dart
macos/: flutter_cef.podspec
macos/Classes/: CefWebSession.swift  FlutterCefPlugin.swift
native/: build_cef_host.sh
native/cef_host/: CMakeLists.txt  entitlements.plist  helper-Info.plist.in  main.mm  process_helper.mm
specs/: osr-ecosystem-survey.md  osr-many-views.md
specs/agent-control/: PLAN.md
specs/cross-platform/: PLAN.md
specs/persistent-profiles/: CONTRACT.md  PLAN.md  SECURITY-REVIEW.md
specs/prebuilt-cef-host/: PLAN.md
test/: cef_input_test.dart  cef_web_controller_test.dart  cef_web_view_test.dart  flutter_cef_method_channel_test.dart  flutter_cef_test.dart  perf_sample.sh  run_cascade_probe.sh  run_channel_integration.sh
tool/: bundle_cef_host.sh
